--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
         <div class="container">
             <div class="hero">
                 <div class="hero__title">
-                    It’s Time To <br> Explore The World
+                    <!-- It’s Time To <br> Explore The World -->
+                    Че Сула, как тебе сайт?
                 </div>
                 <div class="hero__btn">
                     <a href="#">
